Fixed visibility handling for crossfading panels

--- a/src/main.css
+++ b/src/main.css
@@ -127,11 +127,13 @@
 	height: 100%;
 	width: 100%;
 	position: absolute;
-	opacity: 0;
+    opacity: 0;
+    visibility: hidden;
 }
 
 .toolslide .ts-content-item.active {
-	opacity: 1;
+    opacity: 1;
+    visibility: visible;
 }
 
 .toolslide.ts-left.open .ts-container,
